--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "accordion-js": "^3.4.1",
     "axios": "^1.10.0",
+    "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.1",
+    "simplelightbox": "^2.14.3",
     "swiper": "^11.2.10",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
